--- a/sass/layout/_video.scss
+++ b/sass/layout/_video.scss
@@ -3,7 +3,7 @@
   overflow: hidden;
   height: 100vh;
   width: 100%;
-  max-height: $header-height + 10;
+  max-height: 445px;
   position: absolute;
   z-index: 0;
   top: 0;
